#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-19
2015-2-2 David Schneider
- regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
  test bits on Quartz configV2 and smlData.
- track JIRA PSAS-103. Note issue with smlData. Some generated code was modified in this package.
	
Tag: V00-09-18
2014-12-04 David Schneider
- Fix bug. JIRA PSAS-78. Translator crashing on BldDataSpectrometerV1 because the peaks are not specified as possible zero dim.

Tag: V00-09-17
2014-11-25 David Schneider
- regenerate for new pdsdata 8.1.10/psddldata V01-00-22 with TimeTool::ConfigV2, 
  TimeTool::DataV2, Quartz::ConfigV2
- Track JIRA issue PSAS-72

Tag: V00-09-16
2014-10-23 David Schneider
- regenerate for new pdsdata 8.1.8/psddldata V01-00-19 with Epix::Config100aV1 and Epix::ElementV2
  Track JIRA issue PSAS-56

Tag: V00-09-15
2014-10-15 David Schneider
- regenerate for new pdsdata 8.1.7/psddldata V01-00-18 with Bld::BldDataSpectrometerV1
  Track JIRA issue PSAS-50
	
Tag: V00-09-14
2014-10-03 David Schneider
- regenerate for new pdsdata 8.1.4/psddldata with:
  Evr::IOConfigV2. Track JIRA issue PSAS-41

Tag: V00-09-13
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1
- added schema's for TimeTool and GenerigPgp classes. In timetool-h5.ddl
  Note use of [[vlen]] for basename string, and [[zero_len]] for TimeTool 
  data where projection array can be zero len.
	
Tag: V00-09-12
2014-07-03 David Schneider
- regenerate for new pdsdata/psddldata with BldEBeamV6

Tag: V00-09-11
2014-06-14 David Schneider