@@ -1,5 +1,4 @@
 // *** Do not edit this file, it is auto-generated ***
-// TODO: I have modified the file by taking out reference to smldata
 
 #include "MsgLogger/MsgLogger.h"
 #include "PSEvt/Exceptions.h"
@@ -9,12 +8,12 @@
 #include "psddl_hdf2psana/cspad.ddl.h"
 #include "psddl_hdf2psana/l3t.ddl.h"
 #include "psddl_hdf2psana/evr.ddl.h"
-#include "psddl_hdf2psana/encoder.ddl.h"
+#include "psddl_hdf2psana/camera.ddl.h"
 #include "psddl_hdf2psana/usdusb.ddl.h"
 #include "psddl_hdf2psana/timepix.ddl.h"
 #include "psddl_hdf2psana/epixsampler.ddl.h"
-#include "psddl_hdf2psana/camera.ddl.h"
-#include "psddl_hdf2psana/orca.ddl.h"
+#include "psddl_hdf2psana/encoder.ddl.h"
+#include "psddl_hdf2psana/acqiris.ddl.h"
 #include "psddl_hdf2psana/quartz.ddl.h"
 #include "psddl_hdf2psana/gsc16ai.ddl.h"
 #include "psddl_hdf2psana/bld.ddl.h"
@@ -36,7 +35,7 @@
 #include "psddl_hdf2psana/partition.ddl.h"
 #include "psddl_hdf2psana/timetool.ddl.h"
 #include "psddl_hdf2psana/lusi.ddl.h"
-#include "psddl_hdf2psana/acqiris.ddl.h"
+#include "psddl_hdf2psana/orca.ddl.h"
 #include "psddl_hdf2psana/rayonix.ddl.h"
 #include "psddl_hdf2psana/epix.ddl.h"
 #include "psddl_hdf2psana/genericpgp.ddl.h"
