@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-20
+2015-2-3 David Schneider
+- rewrite ddl_hdf2psana wrapper script to exclude smalldata and take 
+  -d for devel types.
+- continue to track JIRA PSAS-103.
+
 Tag: V00-09-19
 2015-2-2 David Schneider
 - regenerate for new pdsdata 8.2.2 with EBeamV7 fix. Also OceanOptics DataV3 and 
